fix: alignment issues

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -24,18 +24,12 @@ body {
 }
 
 html {
-	height: 100%;
-	width: 100vw;
-
 	background-color: var(--bg-secondary);
 
 	overflow-x: hidden;
 }
 
 body {
-	width: 100vw;
-	height: 100%;
-
 	font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial,
 		sans-serif;
 	color: var(--fg);
@@ -44,9 +38,9 @@ body {
 }
 
 nav {
-	margin-top: 2em;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 2em;
 
 	max-width: var(--page-width);
 	height: 64px;
